# webcam-micro

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SPEC.md  pyproject.toml  requirements.in
.github/workflows/: ci.yml  publish.yml
devcovenant/: README.md  __init__.py  __main__.py  asset.py  check.py  clean.py  cli.py  config.yaml  deploy.py  gate.py  install.py  policy.py  refresh.py  run.py  undeploy.py  uninstall.py  upgrade.py
devcovenant/builtin/: __init__.py
devcovenant/core/: README.md  __init__.py  agents_blocks.py  (+27 more)
licenses/: PySide6-6.11.0.txt  PySide6_Addons-6.11.0.txt  PySide6_Essentials-6.11.0.txt  PyYAML-6.0.3.txt  Pygments-2.20.0.txt  README.md  THIRD_PARTY_LICENSES.md  build-1.4.2.txt  cfgv-3.5.0.txt  click-8.3.1.txt  click-8.3.2.txt  distlib-0.4.0.txt  filelock-3.25.2.txt  identify-2.6.18.txt  imageio-ffmpeg-0.6.0.txt  iniconfig-2.3.0.txt  nodeenv-1.10.0.txt  packaging-26.0.txt  pillow-12.2.0.txt  pip-26.0.1.txt  platformdirs-4.9.4.txt  pluggy-1.6.0.txt  pre_commit-4.5.1.txt  pyproject_hooks-1.2.0.txt  pytest-9.0.2.txt  python-discovery-1.2.1.txt  rubicon-objc-0.5.3.txt  semver-3.0.4.txt  setuptools-82.0.1.txt  shiboken6-6.11.0.txt  virtualenv-21.2.0.txt  wheel-0.46.3.txt
tests/: __init__.py  test_app.py  test_bootstrap.py  test_camera.py  test_error_reporting.py  test_launcher.py  test_macos_permission.py  test_release_workflows.py  test_runtime_bootstrap.py  test_ui.py
webcam_micro/: README.md  __init__.py  __main__.py  app.py  camera.py  error_reporting.py  launcher.py  macos_permission.py  runtime_bootstrap.py  ui.py
(+186 files in other folders)
