[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcam-micro"
version = "0.0.1"
description = """
Cross-platform microscope camera application distributed \
as a Python package on PyPI."""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "imageio-ffmpeg>=0.6,<0.7",
    "pillow>=10,<13",
    "ttkbootstrap>=1.20,<2",
]

[project.scripts]
webcam-micro = "webcam_micro.app:main"

[tool.setuptools.packages.find]
include = ["webcam_micro*"]
