[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcam-micro"
version = "0.1.0a1"
description = """
Cross-platform microscope camera application distributed \
as a Python package on PyPI."""
readme = {file = "webcam_micro/README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "PySide6>=6.11,<6.12",
    "rubicon-objc>=0.5,<0.6; sys_platform == 'darwin'",
]

[project.scripts]
webcam-micro = "webcam_micro.launcher:main"

[tool.setuptools.packages.find]
include = ["webcam_micro*"]
